Fixed extra margins and colour scheme

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ header {
 
 .topnav {
   overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #252525;
 }
 
 /* Style the links inside the navigation bar */
@@ -24,13 +28,14 @@ header {
   text-decoration: none;
   font-size: 17px;
   background-color: transparent;
-  color: aliceblue;
+  color: white;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  transition: all 0.3s ;
 }
 
 /*color to the active/current link */
@@ -39,10 +44,11 @@ header {
   color: white;
 }
 
+
 /* hero background image */
 .bgimage {
   height: 100vh;
-  background: linear-gradient(90deg, #252525, #909090);
+  background-image: linear-gradient(to right, #1b1b1b 0%, #000000 100%);
 }
 
 /* text css above hero image*/
@@ -64,22 +70,29 @@ header {
 }
 
 .cntimg {
-  background-color: white
+  background-image: linear-gradient(to right, #1b1b1b 0%, #000000 100%);
+  padding: 0px;
+  color: white;
+  border-radius: ;
 }
 
 .abtimg {
-  background-color: white
+  background-image: linear-gradient(to right, #1b1b1b 0%, #000000 100%);
+  color: white;
 }
 
 .proimg {
-  background-color: white
+  background-image: linear-gradient(to right, #1b1b1b 0%, #000000 100%);
+  padding: 0px;
+  color: white;
 }
 
 
 /* footer styling */
 #footer {
-  background-color: #808080;
+  background-color: #252525;
   text-align: center;
+  color: white;
 }
 
 #footer p {
@@ -96,7 +109,7 @@ header {
 /* social media icons */
 
 .footer-icons {
-  color: #252525;
+  background-color: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
   margin: 0.35rem;
 }
 
@@ -123,7 +136,9 @@ header {
   background-size: 200% auto;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
 }
+
 
 .button a {
   color: aliceblue;
@@ -156,4 +171,10 @@ header {
   opacity: 1;
   right: 0;
   color: #252525;
+}
+
+
+.cnttxt {
+  text-align: center;
+  margin-bottom: 35px;
 }
